Fix expand/collapse display bugs.
Fix bug 1319927 - Add styling to summary/details that Firefox will display
Fix bug 1259287 - Expand/collapse indicators missing from translation interface headings
Fix bug 1304283 - Change +/- to triangle

Standardize on triangles for expand/collapse, no more plus/minus.

Remove Firefox and Chrome default styling and add back custom styling.

Make custom styles better so custom styling for different situations is less necessary. Remove custom details/summary styling for translation, details-list, and no-details.

Browsers do not let us target the auto generated summary elements as they are part of the Shadow DOM.

Will need to be tested in Edge on staging.

Test pages:

https://developer-local.allizom.org/fr/docs/User:stephaniehobson:test$edit
https://developer-local.allizom.org/en-US/fellowship
https://developer-local.allizom.org/en-US/docs/User%3Astephaniehobson%3Adetails
https://developer-local.allizom.org/en-US/docs/User:stephaniehobson:details$edit

--- a/kuma/static/styles/components/fellowship/details-list.styl
+++ b/kuma/static/styles/components/fellowship/details-list.styl
@@ -5,12 +5,3 @@ The details list
     margin-left: $grid-spacing * 2;
     margin-bottom: $gutter-width;
 }
-
-.details-list summary {
-    color: $link-color;
-}
-
-.details-list summary:hover,
-.details-list summary:focus {
-    text-decoration: underline;
-}
