--- a/kuma/static/styles/components/wiki/edit/editing.styl
+++ b/kuma/static/styles/components/wiki/edit/editing.styl
@@ -10,8 +10,7 @@
     }
 
     summary h2 {
-        display: inline-block;
-        margin-bottom: 0;
+        margin-bottom: 0; /* summaries already have bottom margin */
     }
 
     h2 {$selector-icon},
